tests/NormalTests/paczka1/fuzzy1/13525295.err
Error in line 2: b8KsdN S550 22,5
Error in line 7: b8KsdN S550 19,0
Error in line 14: b8KsdN A978 37,2
Error in line 30: b8KsdN S550 46,8
Error in line 26: YCmm S599 55,1
Error in line 17: nFeLiq5Welf S599 41,4
